--- a/assets/css/hellahotchickens.css
+++ b/assets/css/hellahotchickens.css
@@ -150,13 +150,17 @@ br.clearfix {
 #donate .hero-unit .donate-image img {
   position: relative;
   height: 400px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  -webkit-border-radius: 5px;
 }
 #donate .hero-unit .donate-image p {
   position: relative;
-  bottom: 31px;
+  bottom: 35px;
   text-align: right;
   background: rgba(255, 255, 255, 0.69);
-  padding: 0 5px;
+  padding: 2px 5px;
   font-size: 12px;
   display: inline;
 }
