--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -104,6 +104,37 @@ br.clearfix {
 	display: block;
 }
 
+#index {
+	#sponsors {
+		img {
+		}
+		#medtronic {
+			padding:1em;
+		}
+		#physio {
+			padding:1em;
+		}
+		#stratos {}
+		#medtronic {}
+		#blackberry {}
+		#coinstar {}
+		
+		#startupweekend {}
+		#thinkspace {
+			padding:1em;
+		}
+		#startupcity {
+			padding:1em;
+		}
+		#visiport {
+			padding:1em;
+		}
+		#htc {
+			padding:1em;
+		}
+	}
+}
+
 
 #about {
 	h1 {
