--- a/assets/css/hellahotchickens.css
+++ b/assets/css/hellahotchickens.css
@@ -168,7 +168,7 @@ br.clearfix {
   height: 400px;
   border-radius: 5px;
 }
-#donate .hero-unit .donate-image p {
+#donate .hero-unit .donate-image #description-text p#caption {
   position: relative;
   bottom: 35px;
   text-align: right;
@@ -176,6 +176,12 @@ br.clearfix {
   padding: 2px 5px;
   font-size: 12px;
   display: inline;
+}
+#donate .hero-unit .donate-image #description-text p#credit {
+  font-size: 9px;
+  position: relative;
+  top: -4em;
+  right: 5px;
 }
 
 address .address {
